# matcha

./: .clauderules  .gitignore  CLAUDE.md  Makefile  README.md  SETUP_COMPLETE.md  check_settings.py  debug_login.py  debug_register.py  docker-compose.yml  matcha.code-workspace  matcha.md  test_auth_persistence.html  verify_email.sql
.claude/agents/: backend-architect.md  frontend-architect.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  init-db.sql  pyproject.toml  pyrightconfig.json  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 29b0b9559799_create_user_and_profile_tables.py  626a29087fa9_add_has_completed_profile_to_users_table.py  97fbc9e1114f_add_verification_tokens_table.py
backend/src/: __init__.py  main.py
backend/src/application/use_cases/auth/: login_user.py  register_user.py  reset_password.py  verify_email.py
backend/src/application/use_cases/profile/: __init__.py  create_profile.py  get_profile.py  manage_images.py  update_profile.py
backend/src/config/: settings.py
backend/src/core/entities/: chat.py  matching.py  user.py  verification_token.py
backend/src/core/repositories/: chat_repository.py  matching_repository.py  profile_repository.py  unit_of_work.py  user_repository.py  verification_token_repository.py
backend/src/core/services/: email_service.py
backend/src/core/value_objects/: age.py  email.py  fame_rating.py  location.py
backend/src/infrastructure/database/: session.py  unit_of_work.py
backend/src/infrastructure/database/models/: __init__.py  chat_model.py  matching_model.py  user_model.py  verification_token_model.py
backend/src/infrastructure/database/repositories/: profile_repository_impl.py  user_repository_impl.py  verification_token_repository_impl.py
backend/src/matcha/domain/: __init__.py  uow.py
backend/src/matcha/domain/accounts/: commands.py  exceptions.py  factories.py
backend/src/matcha/domain/accounts/usecases/: create.py
backend/src/matcha/domain/common/: __init__.py
backend/src/matcha/domain/services/: auth.py
backend/src/matcha/infrastructure/: __init__.py
backend/src/matcha/infrastructure/api/entities/: accounts.py
backend/src/matcha/infrastructure/api/types/: common.py  login.py
backend/src/matcha/infrastructure/framework/: __init__.py  command.py  exceptions.py  factory.py  models.py  repository.py  uow.py  usecase.py
backend/src/matcha/infrastructure/repositories/mocks/: __init__.py
backend/src/matcha/infrastructure/services/: auth_service.py  chat_service.py  email_service.py  geolocation_service.py  message_bus.py  notifications_service.py  storage_service.py
backend/src/matcha/infrastructure/services/mocks/: __init__.py  auth_service.py  chat_service.py  email_service.py  geolocation_service.py  message_bus.py  notifications_service.py  storage_service.py
backend/src/matcha/infrastructure/uow/: __init__.py  prod.py  test.py
backend/src/presentation/api/: dependencies.py
backend/src/presentation/api/v1/: auth.py  profile.py
backend/src/presentation/schemas/: auth_schemas.py  profile_schemas.py
backend/src/shared/: exceptions.py  security.py
backend/tests/unit/application/: __init__.py
deploy/: docker-compose.yml  nginx.conf
deploy/nginx/: Dockerfile  generate_certs.sh  nginx.conf
frontend/: .env.example  .eslintrc.cjs  Dockerfile  Dockerfile.dev  components.json  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Background.css  Background.tsx  Button.tsx  Heart.tsx  Input.tsx
frontend/src/components/auth/: AuthGuard.tsx  ProfileCompletionGuard.tsx  PublicRoute.tsx  index.ts
frontend/src/components/forms/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/profile/: ImageEditor.tsx  ImageUploader.tsx  ProfileForm.tsx  UserProfileViewer.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  VerifyEmailPage.tsx  index.ts
frontend/src/pages/profile/: CreateProfilePage.tsx  EditProfilePage.tsx  (+3 more)
frontend/src/stores/: authStore.ts  profileStore.ts
frontend/src/types/: api.ts  auth.ts  env.d.ts  index.ts  profile.ts
frontend/src/utils/: validationSchemas.ts
plan/: planfront1.md
services/auth_service/: Dockerfile  requirements.txt
services/auth_service/application/: auth_service.py  settings.py
services/auth_service/domain/: models.py
services/auth_service/infrastructure/: database.py
services/auth_service/interface/: main.py
services/auth_service/tests/: conftest.py  test_auth.py
services/chat_service/: Dockerfile  requirements.txt
services/chat_service/application/: chat_service.py  settings.py
services/chat_service/domain/: models.py
services/chat_service/infrastructure/: database.py
services/chat_service/interface/: main.py
services/chat_service/tests/: conftest.py  test_chat.py
services/matching_service/: Dockerfile  requirements.txt
services/matching_service/application/: matching_service.py  settings.py
services/matching_service/domain/: models.py
services/matching_service/infrastructure/: database.py
services/matching_service/interface/: main.py
services/matching_service/tests/: test_matching.py
services/notification_service/: Dockerfile  requirements.txt
services/notification_service/application/: notification_service.py  settings.py
services/notification_service/domain/: models.py
services/notification_service/infrastructure/: database.py
services/notification_service/interface/: main.py
services/notification_service/tests/: test_notification.py
services/profile_service/: Dockerfile  requirements.txt
services/profile_service/application/: profile_service.py
services/profile_service/domain/: models.py
services/profile_service/infrastructure/: database.py
services/profile_service/interface/: main.py
services/profile_service/tests/: test_profile.py
(+7 files in other folders)
