[project]
name = "matcha"
version = "0.1.0"
description = "Application de rencontres avec architecture DDD hexagonale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "sqlalchemy>=2.0.21",
    "asyncpg>=0.28.0",
    "bcrypt>=4.0.1",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=11.0.3",
    "jwt>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.292",
]

[tool.uv]
